<resources>


    <string name="app_name">Companies Offers</string>

    <string name="Login">Login</string>
    <string name="EN">EN</string>
    <string name="AR">AR</string>
    <string name="Username">User Name</string>

    // admin



    // setting

    <string name="Language">Language</string>
    <string name="YourAccountDetails">Your Account Details</string>


    // Toasts

    <string name="AdminRegisteredSuccessfully">Admin Registered Successfully</string>

    <string name="NoInternetConnection">No Internet Connection</string>




    // confirmation

    <string name="Confirmation">Confirmation Message</string>
    <string name="ConfirmationMsgOfCompany">Are you sure to delete this company ?</string>
    <string name="ConfirmationMsgOfOffer">Are you sure to delete this offer ?</string>
    <string name="ConfirmationMsgOfMarketer">Are you sure to delete this Marketer ?</string>

    <string name="DeletedSuccessfully">Deleted Successfully</string>
    <string name="rejected">ٌRejected Successfully</string>
    <string name="approvedMsg">Approved Successfully</string>

    <string name="AddAdmin">Add Admin</string>

    <string name="ConfirmationMsgOfMarketerRequest">Are you sure to delete this Marketer Request ?</string>


    // Home

    <string name="SearchTitle">Search...</string>

    <string name="AllOffers">All Offers</string>


    // marketers

    <string name="AllMarketers">All Marketers</string>


    // company

    <string name="RegisterCompany">Register Company</string>

    <string name="uploadLogo">Upload Logo</string>

    <string name="Entertopicname">Enter a topic name</string>

    <string name="EnterPassword">Enter Password</string>

    <string name="EnterAddress">Enter Address</string>

    <string name="EnterCompanyType">Enter Company Type</string>

    <string name="IdentityNumberofCompany">Enter Company Identity</string>

    <string name="EnterPhone">Enter Phone</string>

    <string name="EnterEmail">Enter Email</string>

    <string name="EnterMarketerName">Enter Marketer Name</string>

    <string name="YourAllOffers">Your All Offers</string>

    <string name="AllMarketerReqestSignup">All Marketer Request Signup</string>


    // Admin

    <string name="AllCompanies">All Companies</string>


    // Details of offers to edite

    <string name="Title">Title</string>
    <string name="Price">Price</string>
    <string name="BeforePrice">Before Price</string>
    <string name="AfterPrice">After Price</string>
    <string name="SaveEdit">Edit</string>


    // Login

    <string name="BackToHome">Back To Home</string>
    <string name="Logout">Logout</string>


    // upload offer

    <string name="EnterCurrentPrice">Enter Current Price</string>
    <string name="EnterPreviousPrice">Enter  Previous Price</string>
    <string name="EnterDiscountCode">Enter Discount Code</string>
    <string name="EnterOfferDescription">Enter Offer Description</string>
    <string name="Enteranoffertitle">Enter an Offer Title</string>
    <string name="UploadOffer">Upload Offer</string>

    // header nav

    <string name="AllOffersonhands">All Offers on One Hand</string>
    <string name="CompaniesOffers">Companies Offers</string>

    // loading

    <string name="Loading...">Loading...</string>

    //recycle

    <string name="CreatedBy">Created By</string>
    <string name="desc">Description</string>

    <string name="DiscountCode">Discount Code</string>
    <string name="Approved">Approved</string>
    <string name="Rejected">Rejected</string>


    // Signup

    <string name="Name">Name</string>


    <string name="Email">Email</string>


    <string name="Phone">Phone</string>


    <string name="IdentityCardNumber">Identity Card Number</string>


    <string name="Address">Address</string>


    <string name="AlreadyanuserLogin">Already an user? Login</string>

    // Update


    <string name="Update">Update</string>

    <string name="Enterlanguage">Enter language</string>

    <string name="Enterdescription">Enter description</string>

    <string name="UpdateData">Update Data</string>


    // Buttons

    <string name="Save">Save</string>

    <string name="backtoHome">Back to Home</string>


    // Bottom Nav

    <string name="Home">Home</string>

    <string name="Share">Share</string>


    // Signup Activity

    <string name="SignUp">Sign Up</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="title_activity_login">Login</string>
    <string name="title_activity_recycleview">recycleview</string>
    <string name="date">A thin wrapper around a millisecond value that allows JDBC to identify this as an SQL DATE
        value. A milliseconds value represents the number of milliseconds that have passed since January 1, 1970 00:00:00.000 GMT.
        To conform with the definition of SQL DATE, the millisecond values wrapped by a java.sql.Date instance
        must be normalized by setting the hours, minutes, seconds, and milliseconds to zero in the particular time zone with which the instance is associated.
        </string>
    <string name="rating">A RatingBar is an extension of SeekBar and ProgressBar that shows a rating in stars.
        The user can touch/drag or use arrow keys to set the rating when using the default size RatingBar.
        The smaller RatingBar style ( R.attr.ratingBarStyleSmall) and the larger indicator-only style
        (R.attr.ratingBarStyleIndicator) do not support user interaction and should only be used as indicators.
        When using a RatingBar that supports user interaction, placing widgets to the left or right of the
        RatingBar is discouraged.</string>
    <string name="edit">A TextView displays text to the user and optionally allows them to edit it.
        A TextView is a complete text editor, however the basic class is configured to not allow editing.
        </string>
    <string name="camera">The Android framework includes support for various cameras and camera features
        available on devices, allowing you to capture pictures and videos in your applications.
        This document discusses a quick, simple approach to image and video capture and outlines an advanced
        approach for creating custom camera experiences for your users.</string>
    <string name="recyclerview">RecyclerView is the ViewGroup that contains the views corresponding to your data.
        Its a view itself so you add RecyclerView into your layout the way you would add any other UI element.
        Each individual element in the list is defined by a view holder object.
        RecyclerView is a ViewGroup added to the android studio as a successor of the GridView and ListView.
        It is an improvement on both of them and can be found in the latest v-7 support packages.
        It has been created to make possible construction of any lists with XML layouts as an item
        which can be customized vastly while improving on the efficiency of ListViews and GridViews.
    </string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_upload">activity_upload</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_sign_in_company">SignInCompany</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_company_list">CompanyList</string>
    <string name="Password">Password</string>
    <string name="loginButton">Login</string>
</resources>