<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCompany"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity_upload">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#f2f1f1"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RegisterCompany"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/uploadImage"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:autofillHints="upload Logo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/baseline_cloud_upload_24"
                    android:tooltipText="@string/uploadLogo" />

                <EditText
                    android:id="@+id/companyname"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/Entertopicname"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />

                <EditText
                    android:id="@+id/passwordcopmany"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/EnterPassword"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />

                <EditText
                    android:id="@+id/companyadress"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/EnterAddress"
                    android:inputType="textPostalAddress"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />


                <EditText
                    android:id="@+id/companytype"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/EnterCompanyType"
                    android:padding="16dp"
                    android:inputType="text"
                    android:textColor="@color/lavender" />

                <EditText
                    android:id="@+id/companyidentity"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/IdentityNumberofCompany"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />

                <EditText
                    android:id="@+id/companyphone"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/EnterPhone"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />

                <EditText
                    android:id="@+id/comapnyemail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/lavender_border"
                    android:gravity="start|center_vertical"
                    android:hint="@string/EnterEmail"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/lavender" />

<!--                <EditText-->
<!--                    android:id="@+id/CreatedBy"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="60dp"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:background="@drawable/lavender_border"-->
<!--                    android:gravity="start|center_vertical"-->
<!--                    android:hint="@string/EnterMarketerName"-->
<!--                    android:inputType="text|textPersonName"-->
<!--                    android:padding="16dp"-->
<!--                    android:textColor="@color/lavender" />-->

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/purple"
                    android:text="@string/Save"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />


                <TextView
                    android:id="@+id/Back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/backtoHome"
                    android:textAlignment="center"
                    android:textColor="@color/purple">

                </TextView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </ScrollView>
</RelativeLayout>