<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
android:background="@drawable/sign"
    android:gravity="center"
    tools:context=".SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="#D2FFFFFF"

        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            app:cardBackgroundColor="#C8FFFFFF"
            android:background="@drawable/custom_edittext"
           >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SignUp"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/name"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="40dp"
                android:inputType="text"
                android:padding="8dp"
                android:hint="@string/Name"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:hint="@string/Email"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/phone"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                android:padding="8dp"
                android:hint="@string/Phone"
                android:drawableLeft="@drawable/baseline_phone_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/IdentityNumber"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:padding="8dp"
                android:hint="@string/IdentityCardNumber"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/adress"
                android:inputType="text"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/Address"
                android:drawableLeft="@drawable/baseline_add_location_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/SignUp"
                android:id="@+id/registerBtn"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius = "20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/goToLogin"
                android:text="@string/AlreadyanuserLogin"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/lavender"
                android:textSize="18sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>