<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Setting">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />


        <Button
            android:id="@+id/enButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EN"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/arButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/enButton"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <Button-->
<!--            android:id="@+id/signupButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/SignUp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@id/arButton"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/loginTextSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_settings"
            android:layout_gravity="center"
            android:textColor="@color/purple"
            android:textSize="36sp"
            android:textStyle="bold" />

    </com.google.android.material.appbar.AppBarLayout>






<!--    <include layout="@layout/content_setting" />-->

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|end"-->
<!--        android:layout_marginEnd="@dimen/fab_margin"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_bckg"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" >


    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>